# haskell-yesod-weight-record-app

./: .gitignore  README.md  stack.yaml  wegit.db  weight-recorder.cabal
.stack-work/: stack.sqlite3
data/: schema.sql
src/Entity/: User.hs
